--- a/Angular UI/RawMaterialStockUI/src/app/app.component.html
+++ b/Angular UI/RawMaterialStockUI/src/app/app.component.html
@@ -1,5 +1,8 @@
+<!--
 <add-stock></add-stock>
 
 
 <list-stock></list-stock>
-
+-->
+<a href="" routerLink="add-stock"></a>
+<router-outlet></router-outlet>
