--- a/Angular UI/RawMaterialStockUI/src/app/app.component.html
+++ b/Angular UI/RawMaterialStockUI/src/app/app.component.html
@@ -1,8 +1,6 @@
-<!--
-<add-stock></add-stock>
+<body style = "background-color: aquamarine;">
+<h3>Raw Material Stock Management</h3>
+<a href="" routerLink="stock-mgt">Click here for Stock Management</a>
 
-
-<list-stock></list-stock>
--->
-<a href="" routerLink="add-stock"></a>
 <router-outlet></router-outlet>
+</body>
