--- a/Angular UI/RawMaterialStockUI/src/app/list-supplier/list-supplier.component.html
+++ b/Angular UI/RawMaterialStockUI/src/app/list-supplier/list-supplier.component.html
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-    <button type="submit">Find Supplier</button>
+    <button class="btn btn-lg btn-primary" type="submit">Find Supplier</button>
 </form>
 <div *ngIf="fetchedSupplier!==null">
     <br>Id = {{fetchedSupplier.supplierId}}
