--- a/Angular UI/RawMaterialStockUI/src/app/add-stock/add-stock.component.html
+++ b/Angular UI/RawMaterialStockUI/src/app/add-stock/add-stock.component.html
@@ -1,7 +1,8 @@
+<div class="container" style="margin-top: 70px; margin-left: 200px;">
 <form #stockForm ="ngForm" (ngSubmit)="stockForm.valid && addStock(stockForm)">
-    <div>
+    <div class="form-group">
         <label>stock id</label>
-        <input type="text" name="sid" ngModel #sidCtrl=ngModel required minlength="2">
+        <input type="text" class="form-control" name="sid" ngModel #sidCtrl=ngModel required minlength="2">
         <div *ngIf="sidCtrl.errors!=null && sidCtrl.errors.required">
             Stock id is required
         </div>
@@ -10,9 +11,9 @@
         </div>
     </div>
 <br>
-    <div>
+    <div class="form-group">
         <label>order id</label>
-        <input type="text" name="oid" ngModel #oidCtrl=ngModel required minlength="2">
+        <input type="text" class="form-control" name="oid" ngModel #oidCtrl=ngModel required minlength="2">
         <div *ngIf="oidCtrl.errors!=null && oidCtrl.errors.required">
             Order id is required
         </div>
@@ -21,33 +22,33 @@
         </div>
     </div>
     <br>
-    <div>
+    <div class="form-group">
         <label>Price per unit</label>
-        <input type="number" name="price_unit" ngModel #price_unitCtrl=ngModel required>
+        <input type="number" class="form-control" name="price_unit" ngModel #price_unitCtrl=ngModel required>
         <div *ngIf="price_unitCtrl.errors!=null && price_unitCtrl.errors.required">
             Price  is required
         </div>
     </div>
     <br>
-    <div>
+    <div class="form-group">
         <label>Quantity</label>
-        <input type="number" name="quantity" ngModel #quantityCtrl=ngModel required>
+        <input type="number" class="form-control" name="quantity" ngModel #quantityCtrl=ngModel required>
         <div *ngIf="quantityCtrl.errors!=null && quantityCtrl.errors.required">
             Quantity id is required
         </div>
     </div>
     <br>
-    <div>
+    <div class="form-group">
         <label>Price</label>
-        <input type="number" name="price" ngModel #priceCtrl=ngModel required>
+        <input type="number" class="form-control" name="price" ngModel #priceCtrl=ngModel required>
         <div *ngIf="priceCtrl.errors!=null && priceCtrl.errors.required">
             Price is required
         </div>
     </div>
     <br>
-    <div>
+    <div class="form-group">
         <label>warehouse id</label>
-        <input type="text" name="wid" ngModel #widCtrl=ngModel required minlength="2">
+        <input type="text" class="form-control" name="wid" ngModel #widCtrl=ngModel required minlength="2">
         <div *ngIf="widCtrl.errors!=null && widCtrl.errors.required">
             Warehouse id is required
         </div>
@@ -56,17 +57,18 @@
         </div>
     </div>
     <br>
-    <div>
+    <div class="form-group">
         <label>Delivery Date</label>
-        <input type="date" name="delivery" ngModel #deliveryCtrl=ngModel required>
+        <input type="date"class="form-control" name="delivery" ngModel #deliveryCtrl=ngModel required>
         <div *ngIf="deliveryCtrl.errors!=null && deliveryCtrl.errors.required">
             Date is required
         </div>
     </div>
     <br>
-     <button type="submit">Add Stock</button>
+     <button class="btn btn-lg btn-primary" type="submit">Add Stock</button>
 
 </form>
+</div>
 <br>
     <div *ngIf="addedStock!==null">
         <h3>Stock added</h3> 
@@ -81,7 +83,6 @@
     <a href="" routerLink="../list-stock">Stock details</a>
 </li>
 
-<br>
 <br>
 <li>Add Supplier
     <a href="" routerLink="../add-supplier">Add Supplier</a>
