--- a/Angular UI/RawMaterialStockUI/src/app/add-supplier/add-supplier.component.html
+++ b/Angular UI/RawMaterialStockUI/src/app/add-supplier/add-supplier.component.html
@@ -1,5 +1,5 @@
 <p>add-supplier works!</p>
-
+<div class="container" style="margin-top: 70px; margin-left: 300px;">
 <form #form = "ngForm" (ngSubmit)="form.valid && addSupplier(form)">
     <div>
         <label>Supplier id</label>
@@ -46,9 +46,10 @@
     </div>
 
     <br>
-     <button type="submit">Add Supplier</button>
+     <button class="btn btn-lg btn-primary" type="submit">Add Supplier</button>
 
 </form>
+</div>
 <br>
     <div *ngIf="addedSupplier!==null">
         <h3>Supplier added</h3> 
