--- a/Angular UI/RawMaterialStockUI/src/app/list-stock/list-stock.component.html
+++ b/Angular UI/RawMaterialStockUI/src/app/list-stock/list-stock.component.html
@@ -1,3 +1,4 @@
+<div class="container" style="margin-top: 70px; margin-left: 300px;">
 <h1>RawMaterialStock List</h1>
 <table border="1">
     <tr>
@@ -32,7 +33,7 @@
         </div>
     </div>
 
-    <button type="submit">Find Stock</button>
+    <button class="btn btn-lg btn-primary" type="submit">Find Stock</button>
 </form>
 <div *ngIf="fetched!==null">
     Stock id = {{fetched.stockId}}
@@ -61,8 +62,9 @@
         </div>
     </div>
 
-     <button type="submit">Update Stock</button>
+     <button class="btn btn-lg btn-primary" type="submit">Update Stock</button>
 </form>
+</div>
 <div *ngIf="updatedStock!==null">
     Stock ID = {{updatedStock.stockId}}
     Delivery date = {{updatedStock.deliveryDate}}
