--- a/Angular UI/RawMaterialStockUI/src/app/stock-mgt/stock-mgt.component.html
+++ b/Angular UI/RawMaterialStockUI/src/app/stock-mgt/stock-mgt.component.html
@@ -4,3 +4,7 @@
     <li>Add Stock.
     <a href="" routerLink="../add-stock">Add Stock.</a>
 </li>
+<br>
+<li>Add Supplier
+    <a href="" routerLink="../add-supplier">Add Supplier</a>
+</li>
