--- a/Angular UI/RawMaterialStockUI/src/app/add-stock/add-stock.component.html
+++ b/Angular UI/RawMaterialStockUI/src/app/add-stock/add-stock.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 70px; margin-left: 200px;">
+<div class="container" style="margin-top: 70px; margin-left: 150px;">
 <form #stockForm ="ngForm" (ngSubmit)="stockForm.valid && addStock(stockForm)">
     <div class="form-group">
         <label>stock id</label>
@@ -23,6 +23,17 @@
     </div>
     <br>
     <div class="form-group">
+        <label>Stock Name</label>
+        <input type="text" class="form-control" name="name" ngModel #nameCtrl=ngModel required minlength="2">
+        <div *ngIf="nameCtrl.errors!=null && nameCtrl.errors.required">
+            Stock Name is required
+        </div>
+        <div *ngIf ="nameCtrl.errors!=null && nameCtrl.errors.minlength">
+            Min length should be 2
+        </div>
+    </div>
+    <br>
+    <div class="form-group">
         <label>Price per unit</label>
         <input type="number" class="form-control" name="price_unit" ngModel #price_unitCtrl=ngModel required>
         <div *ngIf="price_unitCtrl.errors!=null && price_unitCtrl.errors.required">
@@ -31,10 +42,18 @@
     </div>
     <br>
     <div class="form-group">
-        <label>Quantity</label>
-        <input type="number" class="form-control" name="quantity" ngModel #quantityCtrl=ngModel required>
-        <div *ngIf="quantityCtrl.errors!=null && quantityCtrl.errors.required">
-            Quantity id is required
+        <label>Quantity Value</label>
+        <input type="number" class="form-control" name="quantityValue" ngModel #quantityValueCtrl=ngModel required>
+        <div *ngIf="quantityValueCtrl.errors!=null && quantityValueCtrl.errors.required">
+            Quantity Value is required
+        </div>
+    </div>
+    <br>
+    <div class="form-group">
+        <label>Quantity Unit</label>
+        <input type="number" class="form-control" name="quantityUnit" ngModel #quantityUnitCtrl=ngModel required>
+        <div *ngIf="quantityUnitCtrl.errors!=null && quantityUnitCtrl.errors.required">
+            Quantity Unit is required
         </div>
     </div>
     <br>
@@ -65,6 +84,38 @@
         </div>
     </div>
     <br>
+    <div class="form-group">
+        <label>Manufacturing Date</label>
+        <input type="date"class="form-control" name="manu" ngModel #manuCtrl=ngModel required>
+        <div *ngIf="manuCtrl.errors!=null && manuCtrl.errors.required">
+            Date is required
+        </div>
+    </div>
+    <br>
+    <div class="form-group">
+        <label>Expiry Date</label>
+        <input type="date"class="form-control" name="exp" ngModel #expCtrl=ngModel required>
+        <div *ngIf="expCtrl.errors!=null && expCtrl.errors.required">
+            Date is required
+        </div>
+    </div>
+    <br>
+    <div class="form-group">
+        <label>Quality Check</label>
+        <input type="text" class="form-control" name="check" ngModel #checkCtrl=ngModel required>
+        <div *ngIf="checkCtrl.errors!=null && checkCtrl.errors.required">
+           Check required
+        </div>
+    </div>
+    <br>
+    <div class="form-group">
+        <label>Process Date</label>
+        <input type="date" class="form-control" name="procs" ngModel #procsCtrl=ngModel required>
+        <div *ngIf="procsCtrl.errors!=null && procsCtrl.errors.required">
+            Date is required
+        </div>
+    </div>
+    <br>
      <button class="btn btn-lg btn-primary" type="submit">Add Stock</button>
 
 </form>
@@ -74,6 +125,7 @@
         <h3>Stock added</h3> 
         Stock Id={{addedStock.stockId}}
         Order Id={{addedStock.orderId}}
+        Stock Name={{addedStock.name}}
         Delivery Date={{addedStock.deliveryDate}}
     </div>
 
@@ -83,7 +135,3 @@
     <a href="" routerLink="../list-stock">Stock details</a>
 </li>
 
-<br>
-<li>Add Supplier
-    <a href="" routerLink="../add-supplier">Add Supplier</a>
-</li>
