--- a/Angular UI/RawMaterialStockUI/src/app/add-supplier/add-supplier.component.html
+++ b/Angular UI/RawMaterialStockUI/src/app/add-supplier/add-supplier.component.html
@@ -1,5 +1,5 @@
 <p>add-supplier works!</p>
-<div class="container" style="margin-top: 70px; margin-left: 300px;">
+<div class="container" style="margin-top: 70px; margin-left: 180px;">
 <form #form = "ngForm" (ngSubmit)="form.valid && addSupplier(form)">
     <div>
         <label>Supplier id</label>
@@ -36,7 +36,7 @@
     <br>
     <div>
         <label>Supplier Phone</label>
-        <input type="number" name="phone" ngModel #phoneCtrl=ngModel required minlength="10">
+        <input type="tel" name="phone" ngModel #phoneCtrl=ngModel required minlength="10">
         <div *ngIf="phoneCtrl.errors!=null && phoneCtrl.errors.required">
             Phone number is required
         </div>
