--- a/Angular UI/RawMaterialStockUI/src/app/add-supplier/add-supplier.component.html
+++ b/Angular UI/RawMaterialStockUI/src/app/add-supplier/add-supplier.component.html
@@ -1,7 +1,7 @@
 <p>add-supplier works!</p>
 <div class="container" style="margin-top: 70px; margin-left: 180px;">
 <form #form = "ngForm" (ngSubmit)="form.valid && addSupplier(form)">
-    <div>
+   <!-- <div>
         <label>Supplier id</label>
         <input type="number" name="id" ngModel #idCtrl=ngModel required minlength="2">
         <div *ngIf="idCtrl.errors!=null && idCtrl.errors.required">
@@ -10,7 +10,7 @@
         <div *ngIf ="idCtrl.errors!=null && idCtrl.errors.minlength">
             Min length should be 2
         </div>
-    </div>
+    </div>-->
     <br>
     <div>
         <label>Supplier Name</label>
@@ -36,7 +36,7 @@
     <br>
     <div>
         <label>Supplier Phone</label>
-        <input type="tel" name="phone" ngModel #phoneCtrl=ngModel required minlength="10">
+        <input type="tel" name="phone"  ngModel #phoneCtrl=ngModel required minlength="10">
         <div *ngIf="phoneCtrl.errors!=null && phoneCtrl.errors.required">
             Phone number is required
         </div>
