--- a/Angular UI/RawMaterialStockUI/src/app/list-stock/list-stock.component.html
+++ b/Angular UI/RawMaterialStockUI/src/app/list-stock/list-stock.component.html
@@ -8,6 +8,7 @@
         <th scope="col">Stock Name</th>
         <th scope="col">Price</th>
         <th scope="col">Warehouse Id</th>
+        <th scope="col">Manufacturing Date</th>
         <th scope="col">Delivery Date</th>
         <th scope="col">Process Date</th>
       </tr>
@@ -19,6 +20,7 @@
             <td>{{stock.name}}</td>
             <td>{{stock.price}}</td>
             <td>{{stock.warehouseId}}</td>
+            <td>{{stock.manuDate}}</td>
             <td>{{stock.deliveryDate}}</td>
             <td>{{stock.processDate}}</td>
         </tr>
