--- a/Angular UI/RawMaterialStockUI/src/app/update-stock/update-stock.component.html
+++ b/Angular UI/RawMaterialStockUI/src/app/update-stock/update-stock.component.html
@@ -1,3 +1,4 @@
+<h2 class="text-center">Update Stock Page</h2>
 <div class="container" style="margin-top: 70px; margin-left: 150px;">
 <form #updateForm = "ngForm"   (ngSubmit)="updateForm.valid && updateStock(updateForm)">
     <div class="form-group">
