--- a/Angular UI/RawMaterialStockUI/src/app/add-stock/add-stock.component.html
+++ b/Angular UI/RawMaterialStockUI/src/app/add-stock/add-stock.component.html
@@ -1,19 +1,8 @@
 <h2 class="text-center">Add Stock Page</h2>
 <div class="container" style="margin-top: 35px; margin-left: 150px;">
 <form #stockForm ="ngForm" (ngSubmit)="stockForm.valid && addStock(stockForm)">
-    <div class="form-row">
-    <div class="form-group col-md-6">
-        <label >Stock id</label>
-        <input type="text"  class="form-control"name="sid" ngModel #sidCtrl=ngModel required minlength="2">
-        <div *ngIf="sidCtrl.errors!=null && sidCtrl.errors.required">
-            Stock id is required
-        </div>
-        <div *ngIf ="sidCtrl.errors!=null && sidCtrl.errors.minlength">
-            Min length should be 2
-        </div>
-    </div>
-
-    <div class="form-group col-md-6">
+ 
+    <div class="form-group">
         <label>Order id</label>
         <input type="text" class="form-control " name="oid" ngModel #oidCtrl=ngModel required minlength="2">
         <div *ngIf="oidCtrl.errors!=null && oidCtrl.errors.required">
@@ -23,7 +12,7 @@
             Min length should be 2
         </div>
     </div>
-    </div>
+    
     
     <div class="form-group">
         <label>Stock Name</label>
